@@ -114,3 +114,13 @@ log4j.appender.deleted_gene_pos.layout=org.apache.log4j.PatternLayout
 log4j.appender.deleted_gene_pos.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.deleted_gene_pos.DatePattern='.'yyyy-MM
 log4j.appender.deleted_gene_pos.Append=true
+
+### updated positions
+log4j.logger.updated_pos=debug, updated_pos
+log4j.appender.updated_pos=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.updated_pos.Threshold=INFO
+log4j.appender.updated_pos.File=logs/updated_pos.log
+log4j.appender.updated_pos.layout=org.apache.log4j.PatternLayout
+log4j.appender.updated_pos.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.updated_pos.DatePattern='.'yyyy-MM
+log4j.appender.updated_pos.Append=true
